# minio-rs

./: Cargo.toml
src/: lib.rs  minio.rs
src/minio/: api.rs  api_notification.rs  crypt.rs  sign.rs  types.rs  xml.rs
