[package]
name = "minio-rs"
version = "0.1.0"
authors = ["MinIO Dev Team <dev@min.io>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
futures = "0.3"
hyper = { version = "0.14.14", features = ["client", "http1"] }
hyper-tls = "0.5.0"
log = "0.4.6"
env_logger = "0.9.0"
pretty_env_logger = "0.3.0"
ring = "0.14"
roxmltree = "0.6.0"
serde = "1.0.92"
serde_derive = "1.0.124"
serde_json = "1.0.39"
time = "0.1.42"
tokio = { version = "1.13", features = ["full"] }
xml-rs = "0.8.3"
quick-xml = { version = "0.22", features = [ "serialize" ] }
thiserror = "1.0.24"
## SIO for Client.set_user()
rust-argon2 = "0.8"
rand = "0.8"
sio = "0.2"
[dev-dependencies]
## Test async
futures = "0.3"
